--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ntmod",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,10 +9,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~52.0.43",
+    "@expo/vector-icons": "^14.1.0",
+    "@hookform/resolvers": "^5.0.1",
+    "axios": "^1.9.0",
+    "expo": "~52.0.46",
+    "expo-constants": "~17.0.8",
+    "expo-font": "~13.0.4",
+    "expo-image-picker": "~16.0.6",
+    "expo-linear-gradient": "^14.1.4",
+    "expo-linking": "~7.0.5",
+    "expo-router": "~4.0.21",
+    "expo-splash-screen": "~0.29.24",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
-    "react-native": "0.76.9"
+    "react-hook-form": "^7.56.1",
+    "react-native": "0.76.9",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-screens": "~4.4.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
