--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@hookform/resolvers": "^5.0.1",
+    "@react-native-community/datetimepicker": "~8.2.0",
     "axios": "^1.9.0",
     "expo": "~52.0.46",
     "expo-constants": "~17.0.8",
     "expo-font": "~13.0.4",
     "expo-image-picker": "~16.0.6",
-    "expo-linear-gradient": "^14.1.4",
+    "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.21",
     "expo-splash-screen": "~0.29.24",
@@ -26,6 +27,9 @@
     "react-native": "0.76.9",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-image-zoom-viewer": "^3.0.1",
+    "react-native-maps": "^1.18.0",
+    "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
